erDiagram
    addresses {
        character_varying address 
        character_varying apartment 
        character_varying city 
        character_varying country_code 
        timestamp_with_time_zone created_at 
        uuid customer_id FK 
        character_varying full_name 
        uuid id PK 
        boolean is_default 
        character_varying phone_number 
        character_varying postal_code 
        text salesforce_id 
        character_varying state_code 
        timestamp_with_time_zone updated_at 
    }

    cart_items {
        uuid cart_id FK 
        timestamp_with_time_zone created_at 
        uuid id PK 
        uuid product_variant_id FK 
        integer quantity 
        timestamp_with_time_zone updated_at 
    }

    cart_shipping_rates {
        uuid address_id FK 
        numeric amount 
        text business_days_in_transit 
        text carrier_code 
        text carrier_name 
        uuid cart_id FK 
        timestamp_with_time_zone created_at 
        character_varying currency 
        timestamp_with_time_zone estimated_delivery_date 
        uuid id PK 
        text service_code 
        text service_type 
    }

    carts {
        timestamp_with_time_zone created_at 
        uuid customer_id FK 
        uuid id PK 
        uuid shipping_rate_id 
        cart_status status 
        numeric tax_amount 
        jsonb tax_breakdown 
        character_varying tax_currency 
        timestamp_with_time_zone updated_at 
    }

    customers {
        timestamp_with_time_zone created_at 
        character_varying email UK 
        character_varying first_name 
        uuid id PK 
        character_varying last_name 
        character_varying phone_number 
        text salesforce_id UK 
        text stripe_id UK
        text authorizenet_id UK
        timestamp_with_time_zone updated_at 
    }

    gorp_migrations {
        timestamp_with_time_zone applied_at 
        text id PK 
    }

    order_items {
        jsonb attributes 
        timestamp_with_time_zone created_at 
        text description 
        numeric height 
        uuid id PK 
        text image_url 
        numeric length 
        character_varying name 
        uuid order_id FK 
        numeric price 
        uuid product_id FK 
        uuid product_variant_id FK 
        integer quantity 
        text salesforce_id 
        character_varying sku 
        timestamp_with_time_zone updated_at 
        numeric weight 
        numeric width 
    }

    orders {
        uuid cart_id FK 
        timestamp_with_time_zone created_at 
        character_varying currency 
        uuid customer_id FK 
        character_varying delivery_address 
        character_varying delivery_apartment 
        character_varying delivery_city 
        character_varying delivery_country_code 
        character_varying delivery_full_name 
        character_varying delivery_phone_number 
        character_varying delivery_postal_code 
        character_varying delivery_state_code 
        numeric fulfillment_amount_due 
        numeric fulfillment_freight_charge 
        text fulfillment_message 
        jsonb fulfillment_metadata 
        numeric fulfillment_order_total 
        timestamp_with_time_zone fulfillment_shipment_date 
        text fulfillment_tracking_number 
        uuid id PK 
        character_varying order_reference UK 
        text salesforce_id 
        text shipping_business_days_in_transit 
        text shipping_carrier_code 
        text shipping_carrier_name 
        timestamp_with_time_zone shipping_estimated_delivery_date 
        numeric shipping_rate 
        text shipping_service_code 
        text shipping_service_type 
        order_status status 
        text stripe_payment_intent_id
        text stripe_payment_method_id 
        text authorizenet_payment_id
        numeric subtotal 
        numeric tax_amount 
        jsonb tax_breakdown 
        numeric total 
        timestamp_with_time_zone updated_at 
    }

    product_variants {
        jsonb attributes 
        timestamp_with_time_zone created_at 
        character_varying currency 
        text description 
        numeric height 
        uuid id PK 
        text image_url 
        numeric length 
        character_varying name 
        numeric price 
        uuid product_id FK 
        character_varying sku UK 
        text stripe_tax_code 
        timestamp_with_time_zone updated_at 
        numeric weight 
        numeric width 
    }

    products {
        jsonb attributes 
        timestamp_with_time_zone created_at 
        text description 
        uuid id PK,UK 
        text image_url 
        character_varying name 
        text salesforce_id UK 
        text salesforce_pricebook_entry_id UK 
        timestamp_with_time_zone updated_at 
    }

    wishlist_items {
        timestamp_with_time_zone created_at 
        uuid customer_id FK,UK 
        uuid id PK 
        uuid product_id FK,UK 
    }

    addresses }o--|| customers : "customer_id"
    cart_shipping_rates }o--|| addresses : "address_id"
    cart_items }o--|| carts : "cart_id"
    cart_items }o--|| product_variants : "product_variant_id"
    cart_shipping_rates }o--|| carts : "cart_id"
    carts }o--|| customers : "customer_id"
    orders }o--|| carts : "cart_id"
    orders }o--|| customers : "customer_id"
    wishlist_items }o--|| customers : "customer_id"
    order_items }o--|| orders : "order_id"
    order_items }o--|| product_variants : "product_variant_id"
    order_items }o--|| products : "product_id"
    product_variants }o--|| products : "product_id"
    wishlist_items }o--|| products : "product_id"
